fix z-index, responsive elements, footer

--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -366,6 +366,11 @@ header .topsearch {
 header .topsearch #search_text {}
 
 /* Footer */
+
+.footer1 { display: block; padding-bottom: 7px; margin: auto; }
+
+.footer2 { color: #808080; }
+
 .footer {
   background: rgb(21, 21, 21);
   background: #fff;
@@ -4106,7 +4111,7 @@ nav.two .header-notification .profile-notification li {
     display: none;
   }
 
-  .footer {
+  .footer1 {
     display: none;
   }
 
@@ -5513,7 +5518,7 @@ header.s4.dark #slider_feed .near_me_icon {
 .arrowWrapper {
   display: none;
   position: relative;
-  z-index: 9;
+  z-index: 10;
 }
 
 .arrowWrapper .arrow {
@@ -5764,8 +5769,19 @@ header.s4.dark #slider_feed .near_me_icon {
 
   .half-map .map .leaflet-control-zoom {
     position: fixed;
-    top: 70%;
-    bottom: auto;
+    top: auto;
+    bottom: 50px;
+  }
+
+  .participate {
+    top: auto !important;
+    bottom: 50px;
+  }
+
+
+
+  .leaflet-control-attribution.leaflet-control {
+    margin-bottom: 0;
   }
 
   .ml-filterslide {
@@ -6736,17 +6752,17 @@ nav>ul>li>a i.fas {
 .custom-popup-upload {
     position: fixed;
     top: 50%;
-    right: 450px;
+    right: 30%;
     text-align: center;
     transform: translateY(-50%);
     padding: 10px 20px;
     background-color: white;
     border-radius: 10px;
-    box-shadow: 0 4px 10px rgba(30, 30, 30, 0.3);
-    max-width: 500px;
+    box-shadow: 0 4px 10px rgba(30, 30, 30, 0.5);
+    max-width: 360px;
     z-index: 30;
     opacity: 1;
-
+  display: none;
 }
 
 .custom-popup-upload .logo-wrapper {
@@ -6998,10 +7014,7 @@ nav>ul>li>a i.fas {
     float: none;
     max-width: 200px;
   }
-  .participate {
-    width: 60px;
-    height: 60px !important;
-  }
+
   #feature-info .modal-header .model-back {
     display: none;
   }
@@ -7062,6 +7075,9 @@ nav>ul>li>a i.fas {
     left: 0;
     top: 0;
   }
+
+ .custom-popup-upload {  right: 30%; }
+
   .page-admin #pcoded .logo {
     width: 200px;
     margin-left: 0 !important;
@@ -7132,7 +7148,13 @@ nav>ul>li>a i.fas {
   /*.page-admin #user_content_add .content-add-form {
     margin-top: 20px;
   }*/
+
+  .custom-popup .desc {
+    display: none;
+  }
 }
+
+
 @media only screen and (max-width: 768px) {
   #pcoded .sidebar_toggle {
     top: 15px;
@@ -7143,6 +7165,8 @@ nav>ul>li>a i.fas {
   .pcoded-inner-content {
     padding-left: 20px;
   }
+
+  .custom-popup-upload {  right: 25%; }
 
   .custom-popup {
     display: none;
@@ -7169,8 +7193,10 @@ nav>ul>li>a i.fas {
   }
   .participate {
     top: auto !important;
-    bottom: 50px;
+    bottom: 60px;
   }
+
+.footer2 { display: none; }
 
   .half-map .map .leaflet-control-zoom {
     top: auto;
@@ -7190,6 +7216,9 @@ nav>ul>li>a i.fas {
 }
 
 @media only screen and (max-width: 564px) {
+
+  .custom-popup-upload {  right: 15%; }
+
   .searchchat {
     width: 100%;
     line-height: 40px;
@@ -7252,6 +7281,9 @@ nav>ul>li>a i.fas {
 
 }
 @media only screen and (max-width: 400px) {
+
+  .custom-popup-upload {  right: 5%; }
+
   .responsiveheader .toolbar {
     width: 170px;
     padding: 5px 10px;
